# Status_bot

./: .coverage  .deployment_ready  .dockerignore  .editorconfig  .env.backup  .env.old  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  AUDIT_OVERVIEW.md  AUDIT_README.md  AUDIT_REPORT_STABILITY_2025-10-12.md  AUDIT_SUMMARY.md  BACKUP_И_ДЕПЛОЙ.md  BOT_NOT_RESPONDING_FIX.md  BUTTONS_SETUP_REPORT.md  BUTTON_FIX_REPORT.md  CANCEL_BUTTON_FIX.md  CHANGELOG.md  CHECK_DB_DIRECT.md  CI_CD_SETUP_COMPLETE.md  CLAUDE.md  CLEANUP_PLAN.md  COMPLETE_FIXES_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GUIDE.md  DOCKER_MIGRATION_CHECKLIST.md  DOCKER_MIGRATION_PLAN.md  DOCKER_QUICK_DEPLOY.md  DOCKER_USAGE.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FINAL_WORKFLOWS_STATUS_REPORT.md  FIXES_SUMMARY_2025-10-12.md  GIT_COMMIT_INSTRUCTIONS.md  GROUP_INTERACTION_SUMMARY.md  HOTFIX_DATE_PARSER.md  (+167 more)
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  lint.yml  pr-checks.yml  release.yml  test.yml
Example_order/: Plan_mark1.md  Prompt_parser.md  example.md
Example_order/ChatExport_2025-11-26/: messages.html
Example_order/ChatExport_2025-11-26 (1)/: messages.html
Example_order/Parser/: telegram_parsing_part2.md
Example_order_backup/: Plan_mark1.md  Prompt_parser.md  example.md  logic_parser.md
Example_order_backup/ChatExport_2025-11-26/: messages.html
Example_order_backup/ChatExport_2025-11-26 (1)/: messages.html
Example_order_backup/Parser/: telegram_parsing_part2.md
app/: __init__.py  config.py  decorators.py  states.py  utils.py
app/core/: __init__.py  config.py  constants.py
app/database/: __init__.py  db.py  models.py  orm_database.py  orm_models.py  parser_config_repository.py
app/domain/: __init__.py  order_state_machine.py
app/filters/: __init__.py  group_filter.py  role_filter.py
app/handlers/: __init__.py  admin.py  admin_history.py  common.py  developer.py  dispatcher.py  financial_reports.py  group_interaction.py  master.py  order_edit.py  order_search.py  parser_config.py  parser_stats.py  template.py
app/keyboards/: __init__.py  inline.py  reply.py
app/middlewares/: __init__.py  dependency_injection.py  error_handler.py  logging.py  rate_limit.py  role_check.py  validation_handler.py
app/presenters/: __init__.py  master_presenter.py  order_presenter.py
app/repositories/: __init__.py  base.py  exceptions.py  master_repository.py  order_repository.py  order_repository_extended.py  user_repository.py
app/schemas/: __init__.py  master.py  order.py  user.py
app/services/: active_orders_export.py  auto_update_service.py  excel_export.py  financial_reports.py  master_archive_service.py  master_reports.py  master_reports_detailed.py  master_service.py  order_export.py  order_reports.py  order_search.py  order_service.py  parser_analytics.py  parser_integration.py  realtime_active_orders.py  realtime_daily_table.py  reports.py  reports_notifier.py  reports_service.py  scheduler.py  search_service.py  service_factory.py  user_service.py
app/utils/: __init__.py  date_parser.py  encryption.py  helpers.py  pii_masking.py  retry.py  sentry.py
data/: bot_database.db.backup_before_refuse_reason
data/city2/: bot_database.db.backup_before_refuse_reason
data/migrations/: db_export_20251013_125650.json  db_export_20251013_125838.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.migrate.yml  docker-compose.multibot.yml  docker-compose.prod.yml  docker-compose.redis.yml  docker-compose.staging.yml  docker-compose.yml
docs/: ADMIN_AS_MASTER.md  ARCHITECTURE_DIAGRAM.md  AUDIT_OVERVIEW.md  AUDIT_README.md  AUDIT_REPORT_2025-10-15.md  AUDIT_SUMMARY.md  BACKUP_GUIDE.md  BOT_PY_INTEGRATION.md  CHANGELOG.md  CITY2_EQUIPMENT_TYPE_FIX.md  CI_CD_FILES_CREATED.md  CI_CD_GUIDE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_QUICK_START.md  CLIENT_NAME_VALIDATION_UPDATE.md  CODE_AUDIT_2025.md  CONTRIBUTING.md  CREATE_ORDER_SETUP_REPORT.md  DATABASE_USAGE_GUIDE.md  DEBUG_LOGGING_GUIDE.md  DEV_MODE_GUIDE.md  DISPATCHER_REPORTS_ACCESS.md  DOCKER_USAGE.md  DUAL_ROLE_FIX.md  ENCRYPTION_GUIDE.md  EXCEL_DOCUMENTATION_COMPLETE.md  EXCEL_EXPORT_VALIDATION_PROMPT.md  EXCEL_VALIDATION_COMPLETE_2025-11-18.md  EXCEL_VALIDATION_REPORT_2025-11-17.md  EXCEL_VALIDATION_REPORT_FINAL_2025-11-18.md  FINAL_SUMMARY.md  FINANCIAL_REPORTS_GUIDE.md  FIX_MASTER_STATISTICS_2025-11-17.md  FSM_STATE_MANAGEMENT.md  GIT_COMMIT_INSTRUCTIONS.md  GROUP_INTERACTION_GUIDE.md  HOW_TO_ADD_DISPATCHER_AS_MASTER.md  HOW_TO_ADD_DISPATCHER_ROLE.md  INSTALLATION.md  KEYBOARD_CHANGES.md  (+86 more)
docs/archive/: AUDIT_FINAL_RESULTS.md  AUDIT_README.md  CHANGELOG.md  FINAL_SUMMARY.md  FIX_MIGRATIONS.md  GIT_COMMIT_INSTRUCTIONS.md  (+17 more)
migration_data/: db_export_20251013_125838.json
migrations/: README  env.py
scripts/: README.md  apply_refuse_reason_migration.py  apply_sqlite_migrations.py  backup_db.py  check_and_stamp_migration.py  check_database.py  check_encryption_in_db.py  check_equipment_type_column.py  check_equipment_type_column_city2.py  check_masters_groups.py  check_null_timestamps.py  check_tables.py  check_user_role.py  check_which_db_used.py  cleanup_alembic_temp_tables_city1.py  cleanup_alembic_temp_tables_city2.py  cleanup_and_restructure_docs.ps1  cleanup_dismissed_masters.py  cleanup_migration.py  create_missing_indexes.py  create_order_reports_city1.py  create_order_reports_city2.py  create_specialization_rates_city1.py  create_specialization_rates_city2.py  cron_backup.sh  debug_get_all_masters.py  deploy_prod.sh  deploy_staging.sh  deploy_to_vps.sh  deploy_with_migrations.sh  diagnose_server.sh  diagnose_update.sh  diagnose_user.py  export_db.py  fix_alembic_version.py  fix_alembic_version_city1.py  fix_alembic_version_city2.py  fix_masters_groups_interactive.py  fix_migrations_prod.py  fix_permissions.sh  (+25 more)
tests/: README.md  __init__.py  conftest.py  reproduce_notification.py  test_config.py  test_database.py  test_models.py  test_pydantic_schemas.py  test_utils.py
(+135 files in other folders)
